--- a/InternManagement/InternManagement.csproj
+++ b/InternManagement/InternManagement.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Remove="wwwroot\Image\remix-rumble-1080x1080.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IMSServices\IMSServices.csproj" />
   </ItemGroup>
 
@@ -21,6 +25,10 @@
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 	  </PackageReference>
 	  <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.16" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\Image\remix-rumble-1080x1080.jpg" />
   </ItemGroup>
 
 </Project>
