--- a/InternManagement/InternManagement.csproj
+++ b/InternManagement/InternManagement.csproj
@@ -7,6 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\uploads\**" />
+    <Content Remove="wwwroot\uploads\**" />
+    <EmbeddedResource Remove="wwwroot\uploads\**" />
+    <None Remove="wwwroot\uploads\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Content Remove="Pages\Admin\_InternDetails.cshtml" />
     <Content Remove="wwwroot\Image\remix-rumble-1080x1080.jpg" />
   </ItemGroup>
@@ -31,10 +38,6 @@
   <ItemGroup>
     <None Include="Pages\Admin\_InternDetails.cshtml" />
     <None Include="wwwroot\Image\remix-rumble-1080x1080.jpg" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
   <ItemGroup>
