--- a/IMSBussinessObjects/IMSBussinessObjects.csproj
+++ b/IMSBussinessObjects/IMSBussinessObjects.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="AspNetCoreHero.ToastNotification" Version="1.1.0" />
+    <PackageReference Include="LinqKit" Version="1.3.0" />
+    <PackageReference Include="MailKit" Version="4.7.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.29" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="6.0.29">
       <PrivateAssets>all</PrivateAssets>
