--- a/InternManagement/InternManagement.csproj
+++ b/InternManagement/InternManagement.csproj
@@ -38,4 +38,8 @@
     <None Include="wwwroot\Image\remix-rumble-1080x1080.jpg" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\TestPage\Image\" />
+  </ItemGroup>
+
 </Project>
